<resources>
    <string name="app_name">Covid19</string>
    <string name="donate">Donate</string>
    <string name="e_receipt">e-Receipt</string>
    <string name="_9845124578">9845124578</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="name">Name</string>
    <string name="shaikh_sami">John Doe</string>
    <string name="address">Address</string>
    <string name="downtown_dubai">Downtown,Dubai</string>
    <string name="nationality">Nationality</string>
    <string name="emirati">Emirati</string>
    <string name="emirate_id">Nationality Id</string>
    <string name="_987456321">987456321</string>
    <string name="sami_gmail_com">John@gmail.com</string>
    <string name="amount">Amount</string>
    <string name="print">Print</string>
    <string name="saveaspdf">Save As PDF</string>
    <string name="bill_details">Bill Details</string>
    <string name="product">Product</string>
    <string name="dettol_instant_hand_sanitizer">Dettol Instant hand Sanitizer</string>
    <string name="quantity">Quantity</string>
    <string name="_01">01</string>
    <string name="delivery_location">Delivery Location</string>
    <string name="delivery_amount">Delivery Amount</string>
    <string name="email">Email</string>
    <string name="_5_aed">5 AED</string>
    <string name="_10_aed">10 AED</string>
    <string name="to_pay">To Pay</string>
    <string name="_15_aed">15 AED</string>
    <string name="note">Note</string>
    <string name="due_to_covid_19">Due to COVID-19 you have to pay online, cash on\ndelivery is not allowed</string>
    <string name="payment_15_aed">Payment 15 AED</string>
    <string name="stay_updated_amp_stay_safe"><![CDATA[Stay updated & Stay Safe]]></string>
    <string name="login_with">Login with</string>
    <string name="login">Login</string>
    <string name="how_to_protect"><![CDATA[How to Protect yourself &\n others form Coronavirus\n(2019-nCoV)]]></string>
    <string name="wash_your_hands">Wash your hands</string>
    <string name="wash_your">Wash your hands regulary with\nsoap and water or alcohol-based\nhandrub</string>
    <string name="_02">02</string>
    <string name="use_face_mask">Use face mask</string>
    <string name="cough_or_sneeze">Cough or sneeze into a tissue or\nflexed elbow, then throw the\ntissue in the trash.</string>
    <string name="_03">03</string>
    <string name="avoid_touching_your_face">Avoid touching your face</string>
    <string name="avoid_touching">Avoid touching your nose,\neyes and mouth with unclean\nhands</string>
    <string name="_9717777541">9717777541</string>
    <string name="auto_verifying_your_mobile_number">Auto verifying your mobile number …</string>
    <string name="edit">edit</string>
    <string name="we_have_send_you_otp_on_your_mobile_number">We have send you OTP on your mobile number</string>
    <string name="mobile_verification">Mobile Verification</string>
    <string name="full_name">Full Name</string>
    <string name="next">Next</string>
    <string name="mobile_number_verified">Mobile number Verified</string>
    <string name="your_test_is_positive">Your test is Positive</string>
    <string name="test_timing">Test Timing</string>
    <string name="_03_30_pm">03:30 PM</string>
    <string name="test_id">Test ID</string>
    <string name="_01223124">01223124</string>
    <string name="centre_address">Centre Address</string>
    <string name="age">Age</string>
    <string name="_50">50</string>
    <string name="physical_disability">Physical Disability</string>
    <string name="no">No</string>
    <string name="don_t_panic">Don\'t Panic Ambulance is on the way please\nfollow the guidelines.</string>
    <string name="_1_wear_mask">1) Wear Mask</string>
    <string name="_2_don_t_take">2) Don\'t take any medicine without medical support</string>
    <string name="_3_frequently_wash_your_hands">3) Frequently wash your hands</string>
    <string name="_4_avoid_touching_your_face">4) Avoid touching your face</string>
    <string name="_5_maintain_distance_with_others">5) Maintain Distance with others</string>
    <string name="txt_name">Name*</string>
    <string name="txt_mobileno">Mobile Number*</string>
    <string name="txt_address">Address*</string>
    <string name="txt_email">Email*</string>
    <string name="are_you_answering">Are you answering for yourself or\nsomeone else?</string>
    <string name="myself">Myself</string>
    <string name="someone_else">Someone else</string>
    <string name="where_are_you_they_located">Where are you (they) located?</string>
    <string name="search_area_of_dubai">Search area of Dubai</string>
    <string name="are_you_ill">Are you ill?</string>
    <string name="txt_yes">Yes</string>
    <string name="are_you_caring_for_someone_who_is_ill">Are you caring for someone who is ill?</string>
    <string name="your_age">Your Age?</string>
    <string name="under_2_years">Under 2 years</string>
    <string name="_2_4">2-4</string>
    <string name="_4_8">4-8</string>
    <string name="_8_12">8-12</string>
    <string name="_12_18">12-18</string>
    <string name="_18_30">18-30</string>
    <string name="_30_40">30-40</string>
    <string name="above_40">Above 40</string>
    <string name="your_gender">Your Gender?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="symptoms">Do you have any of the following\nlife-threatening symptoms?</string>
    <string name="symptom_1">Symptom 1</string>
    <string name="symptom_2">Symptom 2</string>
    <string name="symptom_3">Symptom 3</string>
    <string name="symptom_4">Symptom 4</string>
    <string name="symptom_5">Symptom 5</string>
    <string name="symptom_6">Symptom 6</string>
    <string name="do_you_have_any_of_the_following">Do you have any of the following?</string>
    <string name="you_are_safe">You are safe</string>
    <string name="please_follow_the_guidelines">Please Follow the guidelines</string>
    <string name="done">Done</string>
    <string name="your_test_can_be_a_positive">Your test can be a Positive</string>
    <string name="don_t_panic_book_test">Don\'t Panic Book Test at Hospital and please\nfollow the guidelines</string>
    <string name="book_test">Book Test</string>
    <string name="txt_nationality">Nationality*</string>
    <string name="_758969848">758969848</string>
    <string name="txt_amount">Amount*</string>
    <string name="_5000_aed">5000 AED</string>
    <string name="description_1">The Ministry of Health and Prevention announced the recovery of 19 people infected with the COVID-19 virus, raising the total recoveries to 144.</string>
    <string name="description_2">They have fully recovered from the virus symptoms after receiving the necessary health care since they were admitted to hospitals.</string>
    <string name="description_3">The ministry said the new coronavirus cases in people of various nationalities were detected upon examining those who came into contact with the previously infected people.</string>
    <string name="txt_do_you_have_any_disability">Do you have any disability*</string>
    <string name="txt_date_of_birth">Date of Birth*</string>
    <string name="your_test_is_booked">Your test is booked</string>
    <string name="view_on_google_map">View on Google Map</string>
    <string name="please_follow_the_guid">Please follow the guidelines before coming to\nthe hospital</string>
    <string name="available_time_slot_please_select_one">Available Time Slot please select one</string>
    <string name="doctors_will_come">Doctors will come at your home for test till then\nplease follow the guidelines</string>
    <string name="_82">82</string>
    <string name="your_order_is_placed_successfully">Your Order is placed successfully</string>
    <string name="order_id">Order ID</string>
    <string name="_15485">15485</string>
    <string name="payment_method">Payment Method</string>
    <string name="online">Online</string>
    <string name="due_to_covid_19_delivery_can_affect">Due to COVID-19 delivery can affect</string>
    <string name="size_50_ml">Size : 50 ml</string>
    <string name="mfg_date_8_4_2020">Mfg date : 8/4/2020</string>
    <string name="best_before_24_months">Best before 24 months</string>
    <string name="product_description">Product Description</string>
    <string name="trusted_dettol_form">Trusted Dettol Formula; Protects from 100 Illness Causing Germs protection in the classic Dettol fragrance Rinse free and non sticky</string>
    <string name="checkout">Checkout</string>
    <string name="Covid_19">
        <font fgcolor="#10242c">Covid</font><font fgcolor="#df3030">19</font>
    </string>
    <string name="coronavirus_tracking_app">Coronavirus Tracking app</string>
    <string name="history">History</string>
    <string name="description">The history of human coronaviruses began in 1965 when Tyrrell and Bynoe1 found that they could passage a virus named B814. It was found in human embryonic tracheal organ cultures obtained from the respiratory tract of an adult with a common cold. The presence of an infectious agent was demonstrated by inoculating the medium from these cultures intranasally in human volunteers; colds were produced in a significant proportion of subjects, but Tyrrell and Bynoe were unable to grow the agent in tissue culture at that time. At about the same time, Hamre and Procknow2 were able to grow a virus with unusual properties in tissue culture from samples obtained from medical students with colds. Both B814 and Hamre’s virus, which she called 229E, were ether-sensitive and therefore presumably required a lipid-containing coat for infectivity, but these 2 viruses were not related to any known myxo- or paramyxoviruses. While working in the laboratory of Robert Chanock at the National Institutes of Health, McIntosh et al3 reported the recovery of multiple strains of ether-sensitive agents from the human respiratory tract by using a technique similar to that of Tyrrell and Bynoe. These viruses were termed “OC” to designate that they were grown in organ cultures.</string>
    <string name="signin_with">Signin with</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="don_t_worry_we_will">Don\'t worry! we will not post anything\nwithout your permission</string>
    <string name="continue_as_a_guest">Continue as a Guest</string>
    <string name="john_deo">Hi, John Doe</string>
    <string name="dubai">DUBAI</string>
    <string name="menus">Menus</string>
    <string name="stay_updated">Stay Updated</string>
    <string name="emergency_call">Emergency Call</string>
    <string name="logout">Logout</string>
    <string name="description_test">The purpose of the Coronavirus Self-Checker is to help you make decisions about seeking appropriate medical care. This system is not intended for the diagnosis or treatment of disease or other conditions, including COVID-19. This system is intended only for people who are currently located in the Dubai</string>
    <string name="i_dont_agree">I Dont agree</string>
    <string name="i_agree">I agree</string>
    <string name="search_by_product_name">search by product name</string>
    <string name="dettol_hand_instant_sanitizer">Dettol hand instant\nSanitizer</string>
    <string name="near_by_centres">Near By Centres</string>
    <string name="select">Select</string>
    <string name="centre_1">Centre 1</string>
    <string name="_2370">2370</string>
    <string name="total_cases">Total Cases</string>
    <string name="_1898">1898</string>
    <string name="active_cases">Active Cases</string>
    <string name="_294">294</string>
    <string name="new_cases">New Cases</string>
    <string name="deaths">Deaths</string>
    <string name="_11">11</string>
    <string name="_67">67</string>
    <string name="recoveries">recoveries</string>
</resources>