<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".fragment.HistoryFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="33dp"
            android:layout_marginRight="20dp"
            android:paddingBottom="25dp"
            android:clipToPadding="false"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36.3dp"
                android:fontFamily="@font/sf_pro_display_semibold"
                android:text="@string/Covid_19"
                android:textSize="27.7sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/sf_pro_display_bold"
                android:text="@string/coronavirus_tracking_app"
                android:textColor="@color/txt_black"
                android:textSize="9.3sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="41.1dp"
                android:fontFamily="@font/sf_pro_display_bold"
                android:text="@string/history"
                android:textColor="@color/txt_black"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25.5dp"
                android:fontFamily="@font/sf_pro_display_medium"
                android:lineSpacingExtra="6dp"
                android:text="@string/description"
                android:textColor="@color/txt_black"
                android:textSize="14.3sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>